# libshelly

./: .clang_complete  .editorconfig  .gitignore  .gitlab-ci.yml  BUILD  CMakeLists.txt  LICENSE  README  README.md  WORKSPACE
ext/gtest/: CMakeLists.txt
include/: algorithm.hpp  avl_tree.hpp  big_int.hpp  common.hpp  fenwick_tree.hpp  math.hpp  shelly.hpp  stream.hpp
shelly/: BUILD  algorithm.hpp  avl_tree.hpp  avl_tree_test.cpp  big_int.hpp  common_test.cpp  distjoint_set.hpp  distjoint_set_test.cpp  io_redirector.hpp  math.hpp  shelly.hpp  stream.hpp  stream_test.cpp  string_utils.hpp  string_utils_test.cpp
shelly/math/: BUILD  big_int.hpp  big_int_benchmark.cpp  big_int_test.cpp  faulhabers_triangle.hpp  faulhabers_triangle_test.cpp  fraction.hpp  fraction_test.cpp  geometry.hpp  geometry_test.cpp  graph.hpp  graph_test.cpp  math.hpp  math_test.cpp  matrix.hpp  matrix_test.cpp  mod_int.hpp  mod_int_test.cpp
tests/: algorithm.cpp  big_int.cpp  common.cpp  math.cpp  stream.cpp
